fixed alignment on navbar-top items

--- a/style.css
+++ b/style.css
@@ -51,11 +51,16 @@ body {
     margin: 0 auto; /* auto centrerar innehållet horisontellt*/
 }
 
-.navbar-top {
-    border-bottom: 1px solid #707070; 
+.navbar-top .container {
+    align-items:center ;
 }
 
-.navbar , .navbar-top {
+.navbar-top {
+    border-bottom: 1px solid #707070;
+    padding:0.3rem; 
+}
+
+.navbar{
     padding: 0.5rem 1rem;
 }
 
@@ -67,25 +72,23 @@ body {
 .navbar-top .container .clock-hours i {
     color: #2BAAEC;
     font-size: 0.8rem;
-    padding-right: 0.5rem;
+  
 }
 
 .clock-hours  {
     font-family: 'Roboto', sans-serif;
     font-size: 0.7rem;
     color: #626262;
-    padding:0.2rem 0 0 0.4rem
+
 }
 
 .social-icons i {
-  padding:0 0.5rem;
+  padding:0 0.5rem ;
   color: #2BAAEC ;
   font-size: 0.8rem; 
+  padding: 0.5rem 0.5rem;
 }
 
-.navbar-top .clock-icon img {
-  height: 0.8rem;
-}
 
 .social-icons i:hover {
     cursor: pointer;
